Added The Most Important Thing.

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,17 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
+                    <h5><a href="blogs/themostimportantthing.html">The Most Important Thing</a></h5>
+                    <p><i>28th December 2022</i></p>
+                    <p>
+                        Describes an experiment to figure out where I spend my time, and whether
+                        I'm spending it effectively. Results suggest that no, I'm not using it
+                        effectively. I also introduce a tool I built to help me do better.
+                    </p>
+                    <p><i>7 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h5>
                     <p><i>3rd December 2022</i></p>
                     <p>
