--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>
                     <img src="images/logo.png" alt="harry turner logo"/>
                     <h1>Harry Turner</h1>
-                    <h3>Thoughts on ML System Design</h3>
+                    <h3>Thoughts on Building ML Applications</h3>
                 </div>
             </div>
 
@@ -64,6 +64,12 @@
                     <li>
                         <p>
                             <a
+                                    href="https://www.harrysprojects.com/blogs/themostimportantthing.html">Thea - An ML Camera Trap Image Analysis Tool</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <a
                                     href="https://www.harrysprojects.com/blogs/buildsomething.html">Build Something You Can't Live Without</a>
                         </p>
                     </li>
@@ -85,11 +91,6 @@
                     <li>
                         <p>
                             <a href="https://www.harrysprojects.com/projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/articles/objectal.html">Introduction to Active Learning for Object Detection at Vaarst</a>
                         </p>
                     </li>
                 </ul>
