--- a/blogs/themostimportantthing.html
+++ b/blogs/themostimportantthing.html
@@ -4,10 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>The Most Important Thing</title>
-        <meta name="description"
-              content="">
+        <meta name="description" content="Describes an experiment to figure out where I spend my time, and whether
+                        I'm spending it effectively. Results suggest that no, I'm not using it
+                        effectively. I also introduce a tool I built to help me do better.">
         <meta name="author" content="Harry Turner">
-        <meta name="keywords" content="">
+        <meta name="keywords"
+              content="time-management, time, balance, effective, effectiveness, important, opportunity cost">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,7 +17,15 @@
         <link rel=“canonical” href=“https://www.harrysprojects.com/blogs/seriousactivereading.html” />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/Navbar.js" type="text/javascript" defer></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
+          gtag('config', 'UA-180754451-1');
+        </script>
     </head>
     <body>
         <div class="page-container">
@@ -33,106 +43,171 @@
                     now and be well on your way to success and fulfillment! As if...
                 </p>
                 <p>
-                    I turn thirty in a few weeks, right on cue, I have begun to think
+                    I turn thirty in a few weeks and right on cue, I have begun to think
                     about what I've done with my life... and what I want to do with it
-                    next. In this post I want to focus on just one of the thoughts I've had,
-                    possibly the biggest one, the sobering knowledge that I have a finite
-                    amount of time left, and that there is an opportunity cost to everything I
-                    do. It's a depressing thought, but bear with me, this post
-                    turns out to be positive, I promise.
+                    next. In this post I want to focus on one of the thoughts I've had,
+                    possibly the biggest one, that I have a finite
+                    amount of time left and that there is an opportunity cost to everything I
+                    do. At first glance this seems rather depressing, but it's not. It's
+                    actually quite clarifying and something I plan to pay attention to more
+                    often.
                 </p>
                 <p>
                     When I was younger, I thought I had all the time in the
-                    world, but as I've gotten older, I have become acutely aware of time
-                    passing. I realised that if I want to make the best use of my time, then
-                    it means that at any particular moment, I must make sure that I'm doing
-                    the most important thing. Anything else is a waste.
+                    world, but as I've gotten older, I have become more aware of time
+                    passing. Naturally then, if I want to make the best use of my time, then that
+                    means that at any particular moment I should make sure that I'm doing the
+                    most important thing (whatever that is).
                 </p>
                 <p>
                     This is not a post about figuring out what that most important thing is,
-                    that's a very difficult thing to do and I don't have an answer to it.
-                    Instead, this is a post about efficiency, about simply being aware of where
+                    that's a difficult thing to do and I don't have an answer to it.
+                    Instead, this is a post about becoming aware of where
                     I'm spending my time, because I've noticed that if I don't pay attention to
-                    it, I waste it.
+                    it, I tend to waste it.
                 </p>
 
                 <h3>Introducing 'Balance'</h3>
                 <p>
-                    I'm an engineer by training, so naturally I had to start by making a
-                    spreadsheet, which I have nicknamed 'Balance'. It's a method for tracking
-                    where I spend my time with the aim of helping me question whether it's
-                    time well spent.
+                    I'm an engineer by training, so obviously I started by making a
+                    spreadsheet, which I have nicknamed 'Balance'. In short, Balance is a
+                    method for both tracking where I spend my time, and suggesting what I
+                    should maybe do next. Its purpose is to help me discover whether what I'm
+                    doing is time well spent. Let me briefly explain how it works.
                 </p>
                 <p>
-                    I first define a set of values, which are
-                    things that are important to me, like `building and creating things`,
-                    'physical health', 'family' etc. Then I 'log' activities that
-                    contribute to those values. The spreadsheet tracks how much I've
-                    contributed to each of my values and begins to weight more heavily those
-                    things that seem to be getting neglected.
+                    I first define a set of personal values, which are
+                    things that are important to me, like <i>building and creating things</i>,
+                    <i>health</i>, or <i>family</i>. I can assign numbers to these
+                    values that capture how important a value is, relative to the others.
                 </p>
                 <p>
-                    Example spreadsheet.
+                    I then log activities that contribute to those values in some way. An
+                    activity can contribute towards multiple values, and can contribute a
+                    little, or a lot. The spreadsheet tracks how much I've
+                    contributed to each value over time, and begins to weight more heavily those
+                    values that seem to be getting neglected.
                 </p>
                 <p>
-                    This is not about meticuluously tracking everything I do, life is too
-                    messy for that. For the record, I don't agonise over whether a trip to the
-                    pub with a
-                    friend counts as 2 or 3 points towards being social, or whether reading
-                    that book improved my mental well being, or broadened my horizons etc. The
-                    point of the exercise is that it allows me to express in fairly general
-                    terms that this set of values is important to me, and to capture, also in
-                    general terms, how where I spend my time relates to those values.
+                    Activities are ranked by scoring them on how much they <i>would</i>
+                    contribute towards the values. For example, if I have a value called <i>
+                    Health</i>, then I could create an
+                    activity called <i>Running</i> that contributes positively towards it. If I
+                    don't do any physical activity, and assuming there are no other activities
+                    that contribute towards <i>health</i>, then over time the <i>Health</i> value
+                    will become more heavily weighted, and the <i>Running</i> activity will in
+                    turn become higher priority until I can't ignore it any longer.
+                </p>
+                <div class="image-container">
+                    <img width="50%" src="../images/blogs/themostimportantthing/spreadsheet.png"/>
+                    <p><i>Example spreadsheet. Notice how Run is ranked as highest priority
+                    because the health value is the most heavily weighted. All values are
+                        of the same importance in this example.</i></p>
+                </div>
+                <h3>Experiments & Insights</h3>
+                <p>
+                    Let me pause here and clarify that this was not about meticulously tracking
+                    everything I do, life is too messy for
+                    that. The point of the exercise was that it allowed me to express in fairly
+                    general terms that a set of values was important to me, and to capture,
+                    also in general terms, how where I spent my time contributed to fulfilling
+                    those values. I therefore set up a qualitative experiment.
                 </p>
                 <p>
-                    What has ended up happening is that the spreadsheet is beginning
-                    to reveal things about what I said was important vs what I actually end up
-                    doing.
+                    What I hoped to achieve was to learn a little about myself. I was
+                    essentially declaring what I thought was important to me, and I assumed
+                    that I was already using my time effectively. I expected that I was
+                    naturally doing the things at the top of the list, and that my activities
+                    would generally line up with the spreadsheet. It turned out I was wrong.
                 </p>
-                <p style="text-align: center">
-                    <i>"Oi, you said physical health was important, but you've not done
-                        anything about it for weeks, what gives?"</i>
+                <h5>Misalignment</h5>
+                <p>
+                    The first thing I discovered was that the things I said were important,
+                    were not the things that I actually spent my time on. I originally
+                    down-weighted the importance of being social because I wanted to focus on
+                    activities such as finishing my degree and building up skills for my job.
+                    All the social activities were therefore near the bottom of the list, but I
+                    was doing them anyway.
+                </p>
+                <p>
+                    I could figure out the actual importance I was assigning to <i>being
+                    social</i> by increasing it until the value weightings balanced out.
+                    It turned out it was of fairly high importance after all.
+                </p>
+                <p>
+                    Given that what I was doing was misaligned with what I had declared was
+                    important, I wanted to figure out whether I was simply lying to myself
+                    about the initial importance of the values, or whether they were
+                    aspirational and the reality was that I was procrastinating.
+                </p>
+                <h5>Procrastinating</h5>
+                <p>
+                    It turned out it was a mixture of both. Some values were poorly
+                    assigned to start with, and the early results challenged those importance
+                    weightings. It didn't take long for them to converge to stable values. After
+                    that, I assumed any deviations were because I was being lazy and defaulting
+                    to activities that were easier. I learned that my default activity was to
+                    read Instapaper articles.
+                </p>
+                <p>
+                    Instapaper is a tool I use for collecting and organising blog posts. One of
+                    my values is <i>Learning</i>, and reading Instapaper articles directly
+                    contributes to it.  On the surface it felt productive, and reading blog
+                    posts and technical articles is fun and interesting. Another of my values
+                    is my <i>Mental Health</i>, and one of my activities that contributes
+                    towards it is <i>Meditation.</i> The problem is that I find getting
+                    started with meditation quite difficult, so I don't do it very often.
+                </p>
+                <p>
+                    It quickly became apparent that Instapaper was a crutch. As my activities
+                    contributed towards <i>Learning</i>, reading Instapaper articles became
+                    lower and lower priority. So what did I do in response? I simply bumped up
+                    the importance of <i>Learning</i> to counter it. I kept this up until the
+                    importance I had assigned to learning was ridiculously high. I took a step
+                    back and asked myself whether <i>Learning</i> was really five times more
+                    important than my mental health, four times more important than being
+                    healthy, and so on. I decided the answer was no, so I dialed the importance
+                    back down, and then promptly sat on a meditation cushion and tried to start
+                    clearing my mind.
+                </p>
+                <h3>The 'Balance' App</h3>
+                <p>
+                    As the experiment continued, one of the major areas of friction was that
+                    constantly logging to a spreadsheet is tedious and time-consuming,
+                    even when using Google Sheets on mobile. What I needed was
+                    something faster, more user-friendly, and features like a timing
+                    mode that could log increments of activities.
+                </p>
+                <p>
+                    I ended up building myself a mobile app that had these features so that I
+                    could log activities more easily. I built it with the Xano no-code tool and
+                    React Native, so it didn't take that long.
+                </p>
+                <div class="image-container">
+                    <img width="40%" src="../images/blogs/themostimportantthing/app.png"/>
+                    <p><i>Actual screenshot from my Balance iOS app. It lets me log activities in
+                        one hour, half
+                        hour, and timed intervals.</i></p>
+                </div>
+
+                <h3>The Most Important Thing</h3>
+                <p>
+                    The experiment was both fun, and illuminating, and I'm still using the app
+                    to track my time. That being said, I don't run my life via spreadsheet,
+                    it's far too messy for that and the simple algorithm underlying the method
+                    isn't capable of modelling all the details that go into figuring out what
+                    is truly important in my current context.
+                </p>
+                <p>
+                    The most important thing about this experiment then, is that it has made me
+                    conscious of how I spend my time. I said at the beginning that
+                    I'm becoming more aware of time passing, and that I would pay more
+                    attention to the opportunity cost of the activities I undertake. To
+                    that end, Balance is simply a tool that helps me do just that, and discover
+                    where those costs might lie. It challenges me to be thoughtful with my time,
+                    and I'm going to keep at it, for now.
                 </p>
 
-                <p>
-                    I began by specifying a set of values that I decided were important to me.
-                    I then weighted them by how importance I thought they were, the original
-                    assigment was quite arbitrary. If I don't do any activities that contribute
-                    to those values, then over time they start to become more heavily weighted
-                    and begin to turn red. When something becomes very red, I begin to question
-                    whether I should really be doing more towards it.. or perhaps it wasn't
-                    important to me after all. So I often just down weight those values. This
-                    has resulted in an interesting result where the weights I have on the
-                    now are based on my actions, NOT what I thought was important.
-                </p>
-                <p>
-                    I've also tried using it for work. As a tech lead I have multiple
-                    responsibilities, including supporting customers, ensuring technical
-                    quality, maintaining system health. I've noticed areas that I rely on as a
-                    crutch, things that I'll default to doing because it feels productive or
-                    worthwhile, but actually when considered against everything else I'm being
-                    lazy and procrastinating. For example, it's important to pay down technical
-                    debt and keep code quality high, but I find this fun and easy to do so I do
-                    a lot of it, but actually it's just as important to be thinking
-                    strategically about what we want to do next. The spreadsheet has forced me
-                    to spend time on those activities.
-                </p>
-                <p>
-                    It feels weird to be running my life via a spreadsheet and I won't keep
-                    this up indefinitely, it's simply an experiment, but it's been enlightening
-                    to find out more about myself.
-                </p>
-                <p>
-                    So what does it mean to always be doing the most important thing? On being
-                    efficient. Not mechanical, not tracking  every second of every day
-                    (link to efficiency article), not about chasing metrics or achieving a
-                    good score - but instead just being more conscious of
-                    where I spend my time, and try to achieve a bit more
-                    balance across the important areas of my life.
-                </p>
-                <p>
-                    Link to spreadsheet.
-                </p>
 
                 <br />
                 <div id="disqus_thread"></div>
