--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li>
                         <p>
                             <a
-                                    href="https://www.harrysprojects.com/blogs/themostimportantthing.html">Thea - An ML Camera Trap Image Analysis Tool</a>
+                                    href="https://www.harrysprojects.com/blogs/themostimportantthing.html">The Most Important Thing</a>
                         </p>
                     </li>
                     <li>
