Better blog page.

--- a/blog.html
+++ b/blog.html
@@ -33,18 +33,19 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
-                    <h5><a href="blogs/themostimportantthing.html">The Most Important Thing</a></h5>
+                    <h3><a href="blogs/themostimportantthing.html">The Most Important
+                        Thing</a></h3>
                     <p><i>28th December 2022</i></p>
                     <p>
                         Describes an experiment to figure out where I spend my time, and whether
                         I'm spending it effectively. Results suggest that no, I'm not using it
-                        effectively. I also introduce a tool I built to help me do better.
+                        effectively at all. I introduce a tool I built to help me do better.
                     </p>
                     <p><i>7 minute read.</i></p>
                 </div>
                 <div>
                     <br />
-                    <h5><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h5>
+                    <h3><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h3>
                     <p><i>3rd December 2022</i></p>
                     <p>
                         If you build something that <i>you</i> love, something that solves a
@@ -55,7 +56,7 @@
                 </div>
                 <div>
                     <br />
-                    <h5><a href="projects/wordle.html">Python Wordle Solver</a></h5>
+                    <h3><a href="projects/wordle.html">Python Wordle Solver</a></h3>
                     <p><i>30th January 2022</i></p>
                     <p>
                         A walk through and demonstration of a pure Python implementation of a Wordle solver.
@@ -64,7 +65,7 @@
                 </div>
                 <div>
                     <br />
-                    <h5><a href="blogs/burningout.html">On Not Burning Out</a></h5>
+                    <h3><a href="blogs/burningout.html">On Not Burning Out</a></h3>
                     <p><i>20th January 2021</i></p>
                     <p>
                         A personal reminder that balance in life is important.
@@ -73,7 +74,7 @@
                 </div>
                 <div>
                     <br />
-                    <h5><a href="blogs/howtoread.html">How to Read: A Strategy for Identifying and Remembering the Important Stuff</a></h5>
+                    <h3><a href="blogs/howtoread.html">How to Read: A Strategy for Identifying and Remembering the Important Stuff</a></h3>
                     <p><i>20th December 2020</i></p>
                     <p>
                         In this post I outline my strategy for active reading, when I really want to understand, absorb,
@@ -85,7 +86,7 @@
                 </div>
                 <div>
                     <br />
-                    <h5><a href="blogs/sowhat.html">The 'So What'</a></h5>
+                    <h3><a href="blogs/sowhat.html">The 'So What'</a></h3>
                     <p><i>15th September 2020</i></p>
                     <p>
                         A technique for sourcing, triaging, reading, and storing articles when you want to stay up
