--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
                 <ul>
                     <li>
                         <p>
-                            <a
-                                    href="https://www.harrysprojects.com/blogs/themostimportantthing.html">The Most Important Thing</a>
+                            <a href="https://www.harrysprojects.com/projects/gptjournal.html">Building NLP Powered Applications Using the OpenAI API</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            <a
-                                    href="https://www.harrysprojects.com/blogs/buildsomething.html">Build Something You Can't Live Without</a>
+                            <a href="https://www.harrysprojects.com/blogs/themostimportantthing.html">The Most Important Thing</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <a href="https://www.harrysprojects.com/blogs/buildsomething.html">Build Something You Can't Live Without</a>
                         </p>
                     </li>
                     <li>
@@ -86,11 +89,6 @@
                     <li>
                         <p>
                             <a href="https://www.harrysprojects.com/projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a>
                         </p>
                     </li>
                 </ul>
