--- a/machine_learning.html
+++ b/machine_learning.html
@@ -90,6 +90,15 @@
                 <h3>Projects</h3>
                 <div>
                     <br />
+                    <p><a href="projects/gptjournal.html">Building NLP Powered Applications Using
+                        the OpenAI API</a></p>
+                    <p><i>29th December 2022</i></p>
+                    <p>
+                        As an indy developer interested in using natural language processing capabilities in my own projects, I wanted to see how easy it would be to use the OpenAI API and some local unstructured textual data to build something useful.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <p><a href="projects/networklibrary.html">Building a Neural Network Library from Scratch</a></p>
                     <p><i>30th April 2018</i></p>
                     <p>
