--- a/projects/gptjournal.html
+++ b/projects/gptjournal.html
@@ -213,18 +213,21 @@
                     <code>query_journal('What is my opinion on Les Mis?')</code>
                 </p>
                 <p>
-                    <code><i>"I'm not a fan of musicals generally but Arnaud loved it."</i></code>
+                    <code><i>"I'm not a fan of musicals generally but Alex loved it."</i></code>
                 </p>
                 <p>
                     This is partly true, I don't like musicals, but I did like Les Mis. So did
-                    Arnaud.
+                    Alex.
                 </p>
                 <p>
                     <code>query_journal('What was my experience of buying a house?')</code>
                 </p>
                 <p>
                     <code><i>"My experience of buying a house was positive overall. We found a
-                        house that was very cheap, but it was in an area that wasn't ideal. We decided not to compromise on the area and kept looking for a nicer place. We eventually found a cottage that was still on the market and may make an offer on it if there's nothing wrong with it. We ended up completing the purchase and moving in, and the house is more than amazing. We are very happy with it and are still getting used to living together."</i></code>
+                        house that was very cheap, but it was in an area that wasn't ideal. We
+                        decided not to compromise on the area and kept looking for a nicer
+                        place. We eventually found a place that was still on the market and may
+                        make an offer on it if there's nothing wrong with it. We ended up completing the purchase and moving in, and the house is more than amazing. We are very happy with it and are still getting used to living together."</i></code>
                 </p>
                 <p>
                     This is bang on.
@@ -237,7 +240,14 @@
                     <code>query_journal('What happened in March 2020?')</code>
                 </p>
                 <p>
-                    <code><i>'In March 2020, the Coronavirus pandemic was becoming a massive deal, with the economy taking a plunge and the elderly being told to go into isolation. There was a lot of talk about the virus, and I spent time browsing the news and learning more about it. I was reassured by the fact that out of 1000 deaths in Italy, none were under 40, but I was reminded that the elderly were at risk. I also promised myself to do a postcard thing with the neighbours, letting them know my phone number in case they needed food picked up for them.'</i></code>
+                    <code><i>'In March 2020, the Coronavirus pandemic was becoming a massive
+                        deal, with the economy taking a plunge and the elderly being told to go
+                       into isolation. There was a lot of talk about the virus, and I spent
+                        time browsing the news and learning more about it. I was reassured by
+                        the fact that out of 1000 deaths in Italy, none were under 40, but I
+                        was reminded that the elderly were at risk. I also promised myself to
+                        do a postcard thing with the neighbours, letting them know my phone
+                        number in case they needed food picked up for them.'</i></code>
                 </p>
                 <p>
                     This is likely a blend of knowledge the model already has about the
@@ -248,7 +258,10 @@
                     <code>query_journal('What happened to me in February 2021?')</code>
                 </p>
                 <p>
-                    <code><i>'In February 2021, I achieved a lot, finished and submitted an article on YOLO v2 and v3, read some articles, submitted coursework, did house searching with Susie, cooked dinner, paid in a check, had a call with Pete about TM, sorted out a mortgage agreement in principle with NatWest, started Good to Great, did some Dual N Back, and ate healthy.'</i></code>
+                    <code><i>'In February 2021, I achieved a lot, finished and submitted an
+                        article on YOLO v2 and v3, read some articles, submitted coursework,
+                        did house searching, cooked dinner, paid in a check, had a call with
+                        Pete about TM, started Good to Great, and ate healthy.'</i></code>
                 </p>
                 <p>
                     This seems right, although it reads a bit like a shopping list of everything I
@@ -268,7 +281,8 @@
                     <code>query_journal('Summarise what I did on February 25 2022?')</code>
                 </p>
                 <p>
-                    <code>'On February 25 2022, I wrote code to compute the gradient of a convolution, which was a difficult task. I also went to Tortworth Court with Susie to look at the proposed wedding venue and met Dave the Toastmaster.'</code>
+                    <code>'On February 25 2022, I wrote code to compute the gradient of a
+                        convolution, which was a difficult task.'</code>
                 </p>
                 <p>
                     That's also correct. I suspect it's able to answer these kinds of questions
@@ -281,11 +295,11 @@
                     <code>query_journal("Based on places I've been, suggest new travel destinations and explain why it's suitable for me.")</code>
                 </p>
                 <p>
-                    <code><i>'Based on my past travels, I would suggest exploring the Mediterranean region. Corfu, where I am planning to go, is a great destination for an "action" holiday, with lots of activities to keep me busy. I would also suggest exploring the Greek islands, as they offer a variety of activities and stunning scenery. Additionally, I would suggest exploring the Italian coast, as it offers a unique cultural experience and a variety of activities. Finally, I would suggest exploring the French Riviera, as it offers a luxurious and relaxing atmosphere. All of these destinations offer something unique and would be suitable for me based on my past travels.'</i></code>
+                    <code><i>'Based on my past travels, I would suggest exploring the Mediterranean region. Corfu, is a great destination for an "action" holiday, with lots of activities to keep me busy. I would also suggest exploring the Greek islands, as they offer a variety of activities and stunning scenery. Additionally, I would suggest exploring the Italian coast, as it offers a unique cultural experience and a variety of activities. Finally, I would suggest exploring the French Riviera, as it offers a luxurious and relaxing atmosphere. All of these destinations offer something unique and would be suitable for me based on my past travels.'</i></code>
                 </p>
                 <p>
                     I had to tweak this one until it worked, it kept trying to tell me places I
-                    had already been. Also, I have already been to Corfu.
+                    had already been.
                 </p>
                 <h3>Discussion</h3>
                 <p>
