Condense blog to index page.

--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
                 <div>
                     <img src="images/logo.png" alt="harry turner logo"/>
                     <h1>Harry Turner</h1>
-                    <h3>Thoughts on Building ML Applications</h3>
+                    <h3>Thoughts on building ML applications</h3>
                 </div>
             </div>
 
             <div>
                 <h1>Hi, I'm Harry.</h1>
                 <p>
-                    I'm the tech lead for the ML Platform team at <a href="https://vaarst.com/">Vaarst</a>.
-                    We're building an ML enabled data platform in the cloud to allow our customers to intelligently manage,
-                    analyse, and deliver geo-referenced offshore data to their own customers.
+                    I'm the tech lead for the Data Platform team at <a href="https://vaarst.com/">
+                    Vaarst</a>.
+                    We're building a data platform in AWS to allow our customers to intelligently
+                    access, manage, and analyse geo-referenced offshore data.
                 </p>
                 <p>
                     This isn't a website about that, however.
@@ -59,44 +60,103 @@
                     of progress, to reflect and write things down that I've learned along the way. Although I'm
                     doing it for me, I'm making it public in case anything here is of use to somebody else.
                 </p>
-                <h3>Latest Articles</h3>
-                <ul>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/projects/gptjournal.html">Building NLP Powered Applications Using the OpenAI API</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/blogs/themostimportantthing.html">The Most Important Thing</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/blogs/buildsomething.html">Build Something You Can't Live Without</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/projects/wordle.html">Python Wordle Solver</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/articles/pythonproject.html">Standard Python Project Setup</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <a href="https://www.harrysprojects.com/projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a>
-                        </p>
-                    </li>
-                </ul>
                 <h3>Contact Me</h3>
                 <p>
                     You get in touch with me at <b>henry.j.turner@gmail.com</b>.
                     Alternatively, see <a href="https://www.linkedin.com/in/harry-j-turner/">my LinkedIn</a>.
                 </p>
+                </br>
+                <h1>Blog</h1>
+                <div>
+                    <br />
+                    <h3><a href="projects/gptjournal.html">Building NLP Powered Applications Using
+                        the OpenAI API</a></h3>
+                    <p><i>29th December 2022</i></p>
+                    <p>
+                        As an indy developer interested in using natural language processing capabilities in my own projects, I wanted to see how easy it would be to use the OpenAI API and some local unstructured textual data to build something useful.
+                    </p>
+                </div>
+                <div>
+                    <br/>
+                    <h3><a href="blogs/themostimportantthing.html">The Most Important
+                        Thing</a></h3>
+                    <p><i>28th December 2022</i></p>
+                    <p>
+                        Describes an experiment to figure out where I spend my time, and whether
+                        I'm spending it effectively. Results suggest that no, I'm not using it
+                        effectively at all. I introduce a tool I built to help me do better.
+                    </p>
+                    <p><i>7 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h3>
+                    <p><i>3rd December 2022</i></p>
+                    <p>
+                        If you build something that <i>you</i> love, something that solves a
+                        problem that <i>you</i> have, there's a good chance it solves somebody
+                        else's problem as well.
+                    </p>
+                    <p><i>3 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="projects/wordle.html">Python Wordle Solver</a></h3>
+                    <p><i>30th January 2022</i></p>
+                    <p>
+                        A walk through and demonstration of a pure Python implementation of a Wordle solver.
+                    </p>
+                    <p><i>8 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="projects/bgp_measurements.html">Detecting the Facebook Outage
+                        with PyBGPStream</a></h3>
+                    <p><i>10th December 2021</i></p>
+                    <p>
+                        This short project demonstrates how we can use open source tools to investigate internet
+                        connectivity incidents such as the Facebook outage on October 4th. It also introduces BGP.
+                    </p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis
+                        Tool</a></h3>
+                    <p><i>8th August 2021</i></p>
+                    <p>
+                        This was a project in end to end machine learning system design. Specifically, I design and build
+                        a machine learning backed camera trap image analysis and management product. This post is an
+                        overview of the design & implementation, plus a product demonstration.
+                    </p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="blogs/burningout.html">On Not Burning Out</a></h3>
+                    <p><i>20th January 2021</i></p>
+                    <p>
+                        A personal reminder that balance in life is important.
+                    </p>
+                    <p><i>4 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="projects/networklibrary.html">Building a Neural Network Library
+                        from Scratch</a></h3>
+                    <p><i>30th April 2018</i></p>
+                    <p>
+                        I demonstrate how I built a neural network library from scratch, using only numpy.
+                    </p>
+                </div>
+                <div>
+                    <br />
+                    <h3><a href="projects/carcontrol.html">Small Neural Network for Car
+                        Control</a></h3>
+                    <p><i>13th September 2017</i></p>
+                    <p>
+                        In this project, I use genetic algorithms to train a small neural network to control a virtual
+                        car around a track.
+                    </p>
+                </div>
                 <br />
                 <br />
             </div>
