--- a/machine_learning.html
+++ b/machine_learning.html
@@ -30,33 +30,10 @@
             <nav-bar></nav-bar>
 
             <div>
-                <h1>Machine Learning.</h1>
-                <br />
-                <br />
-                <h3>Paper Reviews</h3>
+                <h1>Machine Learning</h1>
+                <h3>Object Detection</h3>
                 <ul>
-                    <ul>
-                        <li><p><a href="articles/efficientnetx.html">Searching for Fast Model Families on Datacenter Accelerators</a></p></li>
-                    </ul>
-                </ul>
-                <br />
-                <h3>Object Detection with Deep Learning</h3>
-                <p>
-                    This is an introductory tutorial series to doing object detection with Deep Learning.
-                    I cover each of the seminal papers in object detection from 2014 when they
-                    first appeared to the state of the art architectures as of 2020. When I first started learning
-                    this field, it took me a while to bridge the gap from basic convolutional classifiers to
-                    object detectors, in this tutorial series I hope to accelerate that process for you by
-                    explaining more clearly the parts that I struggled with the first time around.
-                </p>
-                <p>
-                    The best way to tackle this series is to read it alongside the papers. Except for the first few
-                    introductory posts, each post tackles one paper,
-                    and I attempt to explain the important bits in detail, so that they can be understood
-                    by someone with slightly less background in object detection than the papers assume.
-                </p>
-                <ul>
-                    <h5>Two Stage Detectors: R-CNN to Mesh-RCNN</h5>
+                    <h5>Two Stage Detectors</h5>
                     <ul>
                         <li><p><a href="articles/rcnn.html">R-CNN</a></p></li>
                         <li><p><a href="articles/spp.html">Spatial Pyramid Pooling</a></p></li>
@@ -67,7 +44,7 @@
                 </ul>
                 </br>
                 <ul>
-                    <h5>One Stage Detectors: YOLO to RetinaNet</h5>
+                    <h5>One Stage Detectors</h5>
                     <ul>
                         <li><p><a href="articles/multibox.html">Deep Multi Box</a></p></li>
                         <li><p><a href="articles/yolov1.html">YOLO v1</a></p></li>
@@ -85,35 +62,16 @@
                         <li><p><a href="projects/artificial.html">Generating Artificial Training Data</a></p></li>
                     </ul>
                 </ul>
+                <br/>
+                <h3>Miscellaneous</h3>
+                <ul>
+                    <ul>
+                        <li><p><a href="articles/efficientnetx.html">Searching for Fast Model Families on Datacenter Accelerators</a></p></li>
+                    </ul>
+                </ul>
                 <br />
                 <br />
-                <h3>Projects</h3>
-                <div>
-                    <br />
-                    <p><a href="projects/gptjournal.html">Building NLP Powered Applications Using
-                        the OpenAI API</a></p>
-                    <p><i>29th December 2022</i></p>
-                    <p>
-                        As an indy developer interested in using natural language processing capabilities in my own projects, I wanted to see how easy it would be to use the OpenAI API and some local unstructured textual data to build something useful.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <p><a href="projects/networklibrary.html">Building a Neural Network Library from Scratch</a></p>
-                    <p><i>30th April 2018</i></p>
-                    <p>
-                        I demonstrate how I built a neural network library from scratch, using only numpy.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <p><a href="projects/carcontrol.html">Small Neural Network for Car Control</a></p>
-                    <p><i>13th September 2017</i></p>
-                    <p>
-                        In this project, I use genetic algorithms to train a small neural network to control a virtual
-                        car around a track.
-                    </p>
-                </div>
+                <br />
             </div>
 
         </div>
