--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
             <div class="center-piece">
                 <div>
-                    <img src="images/logo.png" alt="harry turner logo"/>
-                    <h1>Harry Turner</h1>
+                    <h1>Harry Turner's Blog</h1>
                     <h3>Thoughts on building ML applications</h3>
                 </div>
             </div>
@@ -59,15 +58,9 @@
                     of progress, to reflect and write things down that I've learned along the way. Although I'm
                     doing it for me, I'm making it public in case anything here is of use to somebody else.
                 </p>
-                <h3>Contact Me</h3>
-                <p>
-                    You get in touch with me at <b>henry.j.turner@gmail.com</b>.
-                    Alternatively, see <a href="https://www.linkedin.com/in/harry-j-turner/">my LinkedIn</a>.
-                </p>
                 </br>
                 <h1>Blog</h1>
                 <div>
-                    <br />
                     <h3><a href="projects/gptjournal.html">Building NLP Powered Applications Using
                         the OpenAI API</a></h3>
                     <p><i>29th December 2022</i></p>
