--- a/projects/gptjournal.html
+++ b/projects/gptjournal.html
@@ -329,7 +329,8 @@
                     <code>query_journal("What is Thea?")</code>
                 </p>
                 <p>
-                    <code><i>'Thea is a web app that is being developed by Arnaud and the narrator. It is intended to be a VC-backed startup, but the narrator is uncertain about committing to it full-time.'</i></code>
+                    <code><i>'Thea is a web app that is being developed by Alex and the narrator.
+                        It is intended to be a VC-backed startup, but the narrator is uncertain about committing to it full-time.'</i></code>
                 </p>
                 <p>
                     That's correct, but I stopped working on Thea years ago. This isn't a
