--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
             <div class="center-piece">
                 <div>
-                    <h1>Harry Turner's Blog</h1>
-                    <h3>Thoughts on building ML applications</h3>
+                    <h1>Harry's Blog</h1>
+                    <h3>On building ML applications</h3>
                 </div>
             </div>
 
