--- a/index.html
+++ b/index.html
@@ -61,12 +61,23 @@
                 </br>
                 <h1>Blog</h1>
                 <div>
+                    <h3><a href="blogs/importanceofseparateconfig.html">Separating Application and
+                        Configuration</a></h3>
+                    <p><i>6th March 2023</i></p>
+                    <p>
+                        I broke the rule of separating config and application, and ended up
+                        shooting myself in the foot with a particularly nasty bug.
+                    </p>
+                    <p><i>3 minute read.</i></p>
+                </div>
+                <div>
                     <h3><a href="projects/gptjournal.html">Building NLP Powered Applications Using
                         the OpenAI API</a></h3>
                     <p><i>29th December 2022</i></p>
                     <p>
                         As an indy developer interested in using natural language processing capabilities in my own projects, I wanted to see how easy it would be to use the OpenAI API and some local unstructured textual data to build something useful.
                     </p>
+                    <p><i>10 minute read.</i></p>
                 </div>
                 <div>
                     <br/>
