Added new blog post.

--- a/index.html
+++ b/index.html
@@ -34,132 +34,22 @@
             <div class="center-piece">
                 <div>
                     <h1>Harry's Blog</h1>
-                    <h3>On building ML applications</h3>
+                    <h3>Ramblings on ML, Software, and System Design</h3>
                 </div>
             </div>
 
-            <div>
-                <p>
-                    I'm the tech lead for the Data Platform team at <a href="https://vaarst.com/">
-                    Vaarst</a>.
-                    We're building a data platform in AWS to allow our customers to intelligently
-                    access, manage, and analyse geo-referenced offshore data.
-                </p>
-                <p>
-                    This isn't a website about that, however.
-                </p>
-                <p>
-                    I work on personal projects in my spare time and read
-                    things that interest me, mostly around Machine Learning and System Design. My passion is designing
-                    and building systems with AI and ML at their core, and it's what I'm focussing my career around.
-                </p>
-                <p>
-                    This blog is a place to capture thoughts and ideas relating to that goal, somewhere to keep track
-                    of progress, to reflect and write things down that I've learned along the way. Although I'm
-                    doing it for me, I'm making it public in case anything here is of use to somebody else.
-                </p>
                 </br>
-                <h1>Blog</h1>
-                <div>
-                    <h3><a href="blogs/importanceofseparateconfig.html">Separating Application and
-                        Configuration</a></h3>
-                    <p><i>6th March 2023</i></p>
-                    <p>
-                        I broke the rule of separating config and application, and ended up
-                        shooting myself in the foot with a particularly nasty bug.
-                    </p>
-                    <p><i>3 minute read.</i></p>
-                </div>
-                <div>
-                    <h3><a href="projects/gptjournal.html">Building NLP Powered Applications Using
-                        the OpenAI API</a></h3>
-                    <p><i>29th December 2022</i></p>
-                    <p>
-                        As an indy developer interested in using natural language processing capabilities in my own projects, I wanted to see how easy it would be to use the OpenAI API and some local unstructured textual data to build something useful.
-                    </p>
-                    <p><i>10 minute read.</i></p>
-                </div>
-                <div>
-                    <br/>
-                    <h3><a href="blogs/themostimportantthing.html">The Most Important
-                        Thing</a></h3>
-                    <p><i>28th December 2022</i></p>
-                    <p>
-                        Describes an experiment to figure out where I spend my time, and whether
-                        I'm spending it effectively. Results suggest that no, I'm not using it
-                        effectively at all. I introduce a tool I built to help me do better.
-                    </p>
-                    <p><i>7 minute read.</i></p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h3>
-                    <p><i>3rd December 2022</i></p>
-                    <p>
-                        If you build something that <i>you</i> love, something that solves a
-                        problem that <i>you</i> have, there's a good chance it solves somebody
-                        else's problem as well.
-                    </p>
-                    <p><i>3 minute read.</i></p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="projects/wordle.html">Python Wordle Solver</a></h3>
-                    <p><i>30th January 2022</i></p>
-                    <p>
-                        A walk through and demonstration of a pure Python implementation of a Wordle solver.
-                    </p>
-                    <p><i>8 minute read.</i></p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="projects/bgp_measurements.html">Detecting the Facebook Outage
-                        with PyBGPStream</a></h3>
-                    <p><i>10th December 2021</i></p>
-                    <p>
-                        This short project demonstrates how we can use open source tools to investigate internet
-                        connectivity incidents such as the Facebook outage on October 4th. It also introduces BGP.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis
-                        Tool</a></h3>
-                    <p><i>8th August 2021</i></p>
-                    <p>
-                        This was a project in end to end machine learning system design. Specifically, I design and build
-                        a machine learning backed camera trap image analysis and management product. This post is an
-                        overview of the design & implementation, plus a product demonstration.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="blogs/burningout.html">On Not Burning Out</a></h3>
-                    <p><i>20th January 2021</i></p>
-                    <p>
-                        A personal reminder that balance in life is important.
-                    </p>
-                    <p><i>4 minute read.</i></p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="projects/networklibrary.html">Building a Neural Network Library
-                        from Scratch</a></h3>
-                    <p><i>30th April 2018</i></p>
-                    <p>
-                        I demonstrate how I built a neural network library from scratch, using only numpy.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <h3><a href="projects/carcontrol.html">Small Neural Network for Car
-                        Control</a></h3>
-                    <p><i>13th September 2017</i></p>
-                    <p>
-                        In this project, I use genetic algorithms to train a small neural network to control a virtual
-                        car around a track.
-                    </p>
-                </div>
+                <p><a href="blogs/nameyourvariablesproperly.html">An even more compelling reason to name your variables properly</a></p>
+                <p><a href="blogs/importanceofseparateconfig.html">Separating application and configuration</a></p>
+                <p><a href="projects/gptjournal.html">Building NLP powered applications using the OpenAI API</a></p>
+                <p><a href="blogs/themostimportantthing.html">The most important thing</a></p>
+                <p><a href="blogs/buildsomething.html">Build something you can't live without</a></p>
+                <p><a href="projects/wordle.html">Python wordle solver</a></p>
+                <p><a href="projects/bgp_measurements.html">Detecting the Facebook outage with PyBGPStream</a></p>
+                <p><a href="projects/thea.html">Thea - An ML camera trap image analysis tool</a></p>
+                <p><a href="blogs/burningout.html">On not burning out</a></p>
+                <p><a href="projects/networklibrary.html">Building a neural network library from scratch</a></p>
+                <p><a href="projects/carcontrol.html">Small neural network for car control</a></p>
                 <br />
                 <br />
             </div>
