Add link to home page.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
                 </br>
+                <p><a href="blogs/kubernetesmarch2023.html">Setting up a home Kubernetes Cluster using Ubuntu 22.04 and Kubeadm</a></p>
                 <p><a href="blogs/nameyourvariablesproperly.html">An even more compelling reason to name your variables properly</a></p>
                 <p><a href="blogs/importanceofseparateconfig.html">Separating application and configuration</a></p>
                 <p><a href="projects/gptjournal.html">Building NLP powered applications using the OpenAI API</a></p>
